force-app/main/default/objects/OpportunityLineItem/fields/BookingRoomLineID__c.field-meta.xml
<CustomField>
    <fullName>BookingRoomLineID__c</fullName>
    <label>BookingRoomLineID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>