force-app/main/default/objects/OpportunityLineItem/fields/BRLTechnique_10__c.field-meta.xml
<CustomField>
    <fullName>BRLTechnique_10__c</fullName>
    <label>BRLTechnique 10</label>
    <length>40</length>
    <type>Text</type>
</CustomField>