force-app/main/default/objects/OpportunityLineItem/fields/BRLTechnique_1__c.field-meta.xml
<CustomField>
    <fullName>BRLTechnique_1__c</fullName>
    <label>BRLTechnique 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>