force-app/main/default/objects/OpportunityLineItem/fields/BRLTechnique_2__c.field-meta.xml
<CustomField>
    <fullName>BRLTechnique_2__c</fullName>
    <label>BRLTechnique 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>