force-app/main/default/objects/OpportunityLineItem/fields/BuinessLead__c.field-meta.xml
<CustomField>
    <fullName>BuinessLead__c</fullName>
    <label>BuinessLead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>