force-app/main/default/objects/OpportunityLineItem/fields/ChannelCategory__c.field-meta.xml
<CustomField>
    <fullName>ChannelCategory__c</fullName>
    <label>ChannelCategory</label>
    <type>TextArea</type>
</CustomField>