force-app/main/default/objects/OpportunityLineItem/fields/CheckoutDate__c.field-meta.xml
<CustomField>
    <fullName>CheckoutDate__c</fullName>
    <label>CheckoutDate</label>
    <type>Date</type>
</CustomField>