force-app/main/default/objects/OpportunityLineItem/fields/DistributionMode__c.field-meta.xml
<CustomField>
    <fullName>DistributionMode__c</fullName>
    <label>DistributionMode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>