force-app/main/default/objects/OpportunityLineItem/fields/PMS_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>PMS_Line_ID__c</fullName>
    <label>PMS Line ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>