force-app/main/default/objects/OpportunityLineItem/fields/Room_code__c.field-meta.xml
<CustomField>
    <fullName>Room_code__c</fullName>
    <label>Room code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>