force-app/main/default/objects/OpportunityLineItem/fields/TVA_Rate_and_Price__c.field-meta.xml
<CustomField>
    <fullName>TVA_Rate_and_Price__c</fullName>
    <label>TVA Rate and Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>